src/components/Header/Header.css
/************************************************
			Header Containers & Image
************************************************/

.header__section {
	overflow: hidden;
	position: relative;
}

.header__container {
	position: absolute;
	top: 20%;
	width: 100%;
}

@media screen and (min-width: 1024px) {
	.header__container {
	}
}

.text__container {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	width: 29rem;
	height: 33rem;
	margin: 0 auto;
	transform: translateY(-5vw);
}

@media screen and (min-width: 540px) {
	.text__container {
		transform: translateY(-1vh);
	}
}

@media screen and (min-width: 768px) {
	.text__container {
		transform: translateY(-5vh);
	}
}

@media screen and (min-width: 1024px) {
	.text__container {
		margin: 0;
		margin-left: 5%;
	}
}

@media screen and (min-width: 1440px) {
	.text__container {
		margin-left: 12%;
	}
}

/************************************************
			    Header Image
************************************************/

.header__image {
	width: 100%;
	height: auto;
}

.header__image img {
	width: 100%; /* Ensure the image inside the picture fills the container */
	height: auto;
	object-fit: cover; /* Cover ensures it fills the container while preserving aspect ratio */
	display: block; /* Remove any inline gap between images */
	filter: brightness(0.64);
	transform: translateY(-130px);
	/* 	z-index: -1;
 */
}

@media screen and (min-width: 1024px) {
	.header__image img {
		transform: translateY(-100px);
	}
}

/************************************************
			    Header Text
************************************************/

.header__title {
	color: white;
	font-size: 3.6rem;
	text-align: center;
	text-transform: uppercase;
}

.header__title::before {
	content: "New Product";
	text-align: center;
	display: block;
	text-transform: uppercase;
	font-size: 1.3rem;
	letter-spacing: 8px;
	font-weight: 200;
	color: gray;
	margin-bottom: 2rem;
}

.header__text {
	color: gray;
	font-size: 1.4rem;
	line-height: 2.5rem;
	text-align: center;
}

/************************************************
			    Header Button
************************************************/

.header__button {
	background-color: var(--darkOrange);
	color: white;
	font-size: 1.3rem;
	text-transform: uppercase;
	letter-spacing: 1px;
	top: 300px;
	left: 200px;
	padding: 1.5rem 3rem;
	border: none;
}

